# server

./: .gitignore  .sops.yaml  Cargo.toml  Makefile  README.md  configuration.nix  flake.nix  git.nix  hardware-configuration.nix  kamoshi.nix  kotori.nix  mesh.nix  nix.nix  result  ssh.nix  symlink.sh  web.nix
config/newsboat/: urls
config/nvim/: init.lua  lazy-lock.json
config/zed/: settings.json
home/: kamov.nix
home/kamov/: .config.yaml  default.nix
home/kamov/newsboat/: config  urls
home/kamov/zed/: settings.json
home/server/: default.nix
home/shared/: shell.nix
home/work/: default.nix
hosts/: kamoshi.nix
hosts/aya/: default.nix
hosts/kamoshi/: configuration.nix  default.nix  hardware-configuration.nix  services.nix
hosts/kamoshi/profiles/: cgit.nix  freshrss.nix  kotori.nix
hosts/megumu/: default.nix  glance.nix  hardware-configuration.nix  nginx.nix  services.nix  sops.yaml  unbound.nix
migrations/: 20260328000000_hn_schema.sql
modules/: default.nix  forgejo.nix  gatus.nix  grafana.nix  kanidm.nix  kotori.nix  miniflux.nix  syncthing.nix  vikunja.nix
profile/: backup.nix  fail2ban.nix  forgejo.nix  gatus.nix  git.nix  kanidm.nix  kotori.nix  miniflux.nix  postgres.nix  ssh.nix  syncthing.nix  vikunja.nix  web.nix  wireguard.nix
shared/: default.nix
src/: discord.rs  external.rs  internal.rs  kotori.rs  main.rs
src/internal/: hn.rs  summarizer.rs
templates/hn/: index.jinja  rating_group.html
templates/rss/: index.jinja
util/: default.nix  home.nix
