[package]
name = "fukurou"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"

# discord
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
chrono = "0.4.44"

# rss
gemini-rust = "1.7.1"
miniflux_api = "0.8.0"
pulldown-cmark = "0.13.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
minijinja = "2.18.0"

[target.'cfg(debug_assertions)'.dependencies]
minijinja-autoreload = "2.18.0"
time = { version = "0.3.47", features = ["macros", "formatting", "parsing"] }
anyhow = "1.0.102"
