[package]
name = "fukurou"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["normalize-path"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# discord
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
chrono = "0.4"

# rss
scraper = "0.26"
rss = "2.0"
gemini-rust = "1.7"
miniflux_api = "0.8"
pulldown-cmark = "0.13"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
minijinja = "2"
minijinja-autoreload = "2"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
anyhow = "1"
